added toasts, improved design, added documentation

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-loader-spinner": "^5.3.4",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
